--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,12 @@
     <description>A Kafka Connect plugin for Azure Data Explorer (Kusto) Database</description>
     <version>3.0.2</version>
     <properties>
-        <kafka.version>1.0.0</kafka.version>
-        <json.version>20090211</json.version>
-        <junit.version>5.6.2</junit.version>
-        <commonio.version>2.7</commonio.version>
-        <kusto-sdk.version>3.1.1</kusto-sdk.version>
+        <kafka.version>3.1.0</kafka.version>
+        <json.version>20220320</json.version>
+        <junit.version>5.8.2</junit.version>
+        <commonio.version>2.11.0</commonio.version>
+        <kusto-sdk.version>3.1.3</kusto-sdk.version>
+        <jackson-version>2.13.3</jackson-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <build>
@@ -131,6 +132,18 @@
             <groupId>com.microsoft.azure.kusto</groupId>
             <artifactId>kusto-ingest</artifactId>
             <version>${kusto-sdk.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -174,7 +187,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
-            <version>1.9.5</version>
+            <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
         <dependency>
