--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <kafka.version>3.1.0</kafka.version>
         <junit.version>5.9.0</junit.version>
         <commonio.version>2.11.0</commonio.version>
+        <dependency-check-maven.version>8.1.2</dependency-check-maven.version>
         <kusto-sdk.version>4.0.3</kusto-sdk.version>
         <formatter.version>2.20.0</formatter.version>
         <jackson-version>2.13.4.2</jackson-version>
@@ -102,6 +103,11 @@
                     <encoding>UTF-8</encoding>
                     <lineEnding>KEEP</lineEnding>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>${dependency-check-maven.version}</version>
             </plugin>
         </plugins>
         <resources>
