--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,7 @@
 <project
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
->
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.microsoft.azure</groupId>
     <artifactId>kafka-sink-azure-kusto</artifactId>
@@ -11,25 +10,42 @@
     <description>A Kafka Connect plugin for Azure Data Explorer (Kusto) Database</description>
     <version>4.0.1</version>
     <properties>
-        <kafka.version>3.4.0</kafka.version>
-        <junit.version>5.9.2</junit.version>
-        <commonio.version>2.11.0</commonio.version>
+        <avro.random.generator.version>0.4.1</avro.random.generator.version>
+        <awaitility.version>4.2.0</awaitility.version>
+        <azure.bom.version>1.2.12</azure.bom.version>
+        <!-- The following 4 are Added to override vulnerable deps -->
+        <azure.msal4j.version>1.13.7</azure.msal4j.version>
+        <azure.identity.version>1.8.3</azure.identity.version>
         <commoncodec.version>1.15</commoncodec.version>
+        <commonio.version>2.11.0</commonio.version>
         <dependency-check-maven.version>8.1.2</dependency-check-maven.version>
-        <kusto-sdk.version>4.0.4</kusto-sdk.version>
-        <kafka.connect.avro.converter.version>7.3.2</kafka.connect.avro.converter.version>
         <formatter.version>2.20.0</formatter.version>
+        <impsort.version>1.8.0</impsort.version>
         <jackson-version>2.14.2</jackson-version>
-        <littleproxy.version>1.1.2</littleproxy.version>
+        <java.release.version>11</java.release.version>
+        <jsonassert.version>1.5.1</jsonassert.version>
+        <!-- Added to override vulnerable deps -->
+        <jsonsmart.version>2.4.10</jsonsmart.version>
+        <junit.version>5.9.2</junit.version>
+        <kafka.connect.avro.converter.version>7.3.2</kafka.connect.avro.converter.version>
+        <kafka.version>3.4.0</kafka.version>
+        <kusto.sdk.version>4.0.4</kusto.sdk.version>
+        <mvn.assembly.plugin.version>3.2.0</mvn.assembly.plugin.version>
+        <mvn.compiler.plugin.version>3.11.0</mvn.compiler.plugin.version>
+        <mvn.failsafe.plugin.version>3.0.0</mvn.failsafe.plugin.version>
+        <mvn.surefire.plugin.version>3.0.0</mvn.surefire.plugin.version>
         <mockito.version>5.2.0</mockito.version>
+        <!-- Added to override vulnerable deps -->
+        <nimbusjose.jwt.version>9.31</nimbusjose.jwt.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <testcontainer.version>1.18.0</testcontainer.version>
     </properties>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>${mvn.assembly.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>make-assembly</id> <!-- this is used for inheritance merges -->
@@ -42,7 +58,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>fully.qualified.MainClass</mainClass>
+                            <mainClass>com.microsoft.azure.kusto.kafka.connect.sink.KustoSinkConnector</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -53,10 +69,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>${mvn.compiler.plugin.version}</version>
                 <inherited>true</inherited>
                 <configuration>
-                    <release>11</release>
+                    <release>${java.release.version}</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -93,8 +109,21 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${mvn.failsafe.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>**/*KustoSinkIT.java</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>net.revelc.code.formatter</groupId>
@@ -105,6 +134,26 @@
                     <encoding>UTF-8</encoding>
                     <lineEnding>KEEP</lineEnding>
                 </configuration>
+            </plugin>
+            <!-- Makes it easier to have consist import order -->
+            <plugin>
+                <groupId>net.revelc.code</groupId>
+                <artifactId>impsort-maven-plugin</artifactId>
+                <version>${impsort.version}</version>
+                <configuration>
+                    <groups>java.,javax.,org.,com.</groups>
+                    <removeUnused>true</removeUnused>
+                    <staticAfter>true</staticAfter>
+                    <!-- <staticGroups>java.,javax.,org.w3c.,org.xml.,junit.</staticGroups> -->
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>sort-imports</id>
+                        <goals>
+                            <goal>sort</goal><!-- runs at process-sources phase by default -->
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.owasp</groupId>
@@ -119,9 +168,7 @@
             </resource>
         </resources>
     </build>
-
     <name>Kafka Connect Azure Data Explorer (Kusto) Sink</name>
-
     <licenses>
         <license>
             <name>The MIT License (MIT)</name>
@@ -129,12 +176,10 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-
     <scm>
         <url>https://github.com/Azure/kafka-sink-azure-kusto</url>
         <connection>scm:git://github.com/Azure/kafka-sink-azure-kusto.git</connection>
     </scm>
-
     <developers>
         <developer>
             <id>microsoft</id>
@@ -146,7 +191,7 @@
             <dependency>
                 <groupId>com.azure</groupId>
                 <artifactId>azure-sdk-bom</artifactId>
-                <version>1.2.10</version>
+                <version>${azure.bom.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -156,19 +201,35 @@
         <dependency>
             <groupId>com.microsoft.azure.kusto</groupId>
             <artifactId>kusto-data</artifactId>
-            <version>${kusto-sdk.version}</version>
+            <version>${kusto.sdk.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.fasterxml.jackson.core</groupId>
                     <artifactId>jackson-databind</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>com.fasterxml.woodstox</groupId>
-                    <artifactId>woodstox-core</artifactId>
+                    <groupId>commons-codec</groupId>
+                    <artifactId>commons-codec</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>com.azure</groupId>
-                    <artifactId>azure-core-http-netty</artifactId>
+                    <artifactId>azure-identity</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.azure</groupId>
+                    <artifactId>azure-storage-blob</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.azure</groupId>
+                    <artifactId>azure-storage-queue</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.azure</groupId>
+                    <artifactId>azure-data-tables</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.azure</groupId>
+                    <artifactId>azure-storage-common</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>com.azure</groupId>
@@ -176,17 +237,25 @@
                 </exclusion>
                 <exclusion>
                     <groupId>com.azure</groupId>
-                    <artifactId>azure-identity</artifactId>
+                    <artifactId>azure-core-http-netty</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-core-http-netty</artifactId>
+            <version>1.13.2</version>
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-identity</artifactId>
+            <version>${azure.identity.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.microsoft.azure</groupId>
+                    <artifactId>msal4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
@@ -194,11 +263,11 @@
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
-            <artifactId>azure-storage-queue</artifactId>
+            <artifactId>azure-data-tables</artifactId>
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
-            <artifactId>azure-data-tables</artifactId>
+            <artifactId>azure-storage-queue</artifactId>
         </dependency>
         <dependency>
             <groupId>com.azure</groupId>
@@ -208,10 +277,37 @@
             <groupId>com.azure</groupId>
             <artifactId>azure-core</artifactId>
         </dependency>
+        <!-- used in msal4j in azure-identity , 2.4.8 has a Vulnerability -->
+        <dependency>
+            <groupId>com.microsoft.azure</groupId>
+            <artifactId>msal4j</artifactId>
+            <version>${azure.msal4j.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.minidev</groupId>
+                    <artifactId>json-smart</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.nimbusds</groupId>
+                    <artifactId>nimbus-jose-jwt</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>${nimbusjose.jwt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+            <version>${jsonsmart.version}</version>
+        </dependency>
+        <!-- msal4j vulnerabilities fixed -->
         <dependency>
             <groupId>com.microsoft.azure.kusto</groupId>
             <artifactId>kusto-ingest</artifactId>
-            <version>${kusto-sdk.version}</version>
+            <version>${kusto.sdk.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.fasterxml.jackson.core</groupId>
@@ -305,15 +401,39 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.littleshoot</groupId>
-            <artifactId>littleproxy</artifactId>
-            <version>${littleproxy.version}</version>
+            <groupId>io.confluent.avro</groupId>
+            <artifactId>avro-random-generator</artifactId>
+            <version>${avro.random.generator.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>${testcontainer.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>kafka</artifactId>
+            <version>${testcontainer.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>${awaitility.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.skyscreamer</groupId>
+            <artifactId>jsonassert</artifactId>
+            <version>${jsonassert.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
