Fix vulnerabilities in netty (#135)
* Update library versions
* Bump versions

--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
     <artifactId>kafka-sink-azure-kusto</artifactId>
     <packaging>jar</packaging>
     <description>A Kafka Connect plugin for Azure Data Explorer (Kusto) Database</description>
-    <version>4.1.3</version>
+    <version>4.1.4</version>
     <properties>
         <avro.random.generator.version>0.4.1</avro.random.generator.version>
         <awaitility.version>4.2.2</awaitility.version>
         <az.core.version>1.54.1</az.core.version>
-        <az.identity.version>1.14.2</az.identity.version>
-        <az.netty.version>1.15.7</az.netty.version>
+        <az.identity.version>1.15.2</az.identity.version>
+        <az.netty.version>1.15.9</az.netty.version>
         <commoncodec.version>1.17.1</commoncodec.version>
         <commonio.version>2.16.1</commonio.version>
         <dependency-check-maven.version>10.0.2</dependency-check-maven.version>
@@ -163,6 +163,9 @@
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
                 <version>${dependency-check-maven.version}</version>
+                <configuration>
+                    <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
+                </configuration>
             </plugin>
         </plugins>
         <resources>
